@@ -109,6 +109,8 @@ library:
     @tab Format used in various Interplay computer games.
 @item IV8                       @tab   @tab X
     @tab A format generated by IndigoVision 8000 video server.
+@item IVF (On2)                 @tab   @tab X
+    @tab A format used by libvpx
 @item LMLM4                     @tab   @tab X
     @tab Used by Linux Media Labs MPEG-4 PCI boards
 @item Matroska                  @tab X @tab X
